# codebase-timeline-visualizer

./: .dockerignore  .gitignore  Dockerfile  README.md  SETUP_TROUBLESHOOTING.md  check_setup.py  docker-compose.yml  example.py  pyproject.toml  requirements.txt  setup.bat  setup.ps1  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  cross-platform.yml  dependencies.yml  deploy-frontend.yml  docker.yml  docs.yml  issue-management.yml  main.yml  pipeline.yml  quality-gates.yml  release-notes.yml  release.yml  security.yml
backend/: __init__.py
backend/src/: __init__.py  analyzer.py  exporter.py  main.py
backend/tests/: __init__.py  test_analyzer.py
cli/src/: main.py
docs/: GETTING_STARTED.md  WORKFLOWS.md
frontend/: .eslintrc.json  audit-ci.json  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Timeline.css  Timeline.js
